<resources>
    <string name="app_name">Vertretungsplan</string>
    <string name="menu_settings_title">Einstellungen</string>
    <string name="menu_refresh_title">Neu laden</string>
    <string name="menu_donate_title">Spenden</string>
    <string name="settings_menu_refresh_title">Klassen neu laden</string>
    <string name="title_activity_donate">DonateActivity</string>

    <string name="notification_type_default">INTERVAL_HALF_HOUR</string>
    <string name="donation_description">Du nutzt meine App gerne und möchtest dafür etwas zurückgeben?\nDann bist Du hier genau richtig!\n\nEs ist natürlich kein Muss und jedem selbst überlassen. Ich würde mich jedoch sehr über einen kleine Spende für meine aufgebrachte Zeit und Arbeit freuen.</string>
    <string name="version_number_not_found">Version kann nicht angezeigt werden.</string>
    <string name="version_number">"Version: %1$s (%2$d)"</string>
    <string name="no_connection">Keine Verbindung</string>
    <string name="period_description">%1$s. Stunde</string>
    <string name="welcome_next">Weiter</string>
    <string name="welcome_choose_school">Wähle deine Schule aus:</string>
    <string name="welcome_choose_class">Wähle deine Klasse aus:</string>
    <string name="openPlanInBrowserText">Vertretungsplan im Browser öffnen</string>
    <string name="changelog">Changelog</string>
    <string name="logo">logo</string>
    <string name="_1_spenden">1€ Spenden</string>
    <string name="_2_spenden">2€ Spenden</string>
    <string name="_5_spenden">5€ Spenden</string>
    <string name="free">frei</string>
    <string name="default_class">12 B</string>
    <string name="default_period">period</string>
    <string name="default_teacher">teacher</string>
    <string name="default_subject">subject</string>
    <string name="default_room">room</string>
    <string name="default_information">info</string>
    <string name="menu_settings_about">Über</string>
    <string-array name="notification_types_entries">
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
    <string-array name="notification_types_values">
        <item>INTERVAL_FIFTEEN_MINUTES</item>
        <item>INTERVAL_HALF_HOUR</item>
        <item>INTERVAL_HOUR</item>
    </string-array>

    <string-array name="whatsnew_header">
        <item>Version 1.4:\n</item>
        <item>Version 1.4.1:\n</item>
        <item>Version 1.4.2:\n</item>
        <item>Version 1.4.3:\n</item>
        <item>Version 1.4.4:\n</item>
    </string-array>
    <string-array name="whatsnew_descriptions">
        <item>- Willkommensbildschirm beim ersten Starten der App \n- Kleine UI-Änderungen\n- Eine Menge Bugfixes (Ich freue mich immer über Meldungen, falls etwas nicht funktioniert)!\n- Blockstunden werden jetzt wieder korrekt angezeigt\n- Es kann sein, dass das Benachrichtigen bei einem neuen Plan
            momentan nicht zu 100% läuft. Freue mich dort über Feedback!\n\nTut mir Leid, dass ich solange kein Update gepusht habe. Ich habe
        mittlerweile einen etwas geregelten Tagesablauf und kann mich um die App wieder regelmäßiger kümmern. Ich werde mich jetzt endlich daran setzen, dass ihr in Zukunft auch den Stundenplan hier einsehen könnt. Einige von euch haben die App wieder deinstalliert. Vielleicht sagt ihr euern Mitschülern
        Bescheid, dass sie nun wieder funktionsfähig ist ;) \nViele Grüße, David</item>
        <item>- kleine Bugs behoben \nSollte die App crashen bitte einmal den App-Cache leeren (Einstellungen -> Apps -> Vertretungsplan -> Speicher -> Daten löschen) und es dann nochmal versuchen. Falls beim Stehen bleiben der App ein Fenster öffnet, dann darüber bitte den Report senden und ich werde mich
        darum entsprechend kümmern!</item>
        <item>- Problem behoben, dass die App sich bei den momentanen Stunden selbst beendet.\n- Mir ist aufgefallen, dass die Benachrichtigungen nicht funktionieren. Ich versuche mich die kommenden Tage darum zu kümmern.\n\nVielen Dank, für das viele Feedback! Einfacher als über die Reviews im PlayStore bin
        sonst auch per Mail zu erreichen - die findet ihr, wenn ihr auf der Seite der App im Store runter scrollt.</item>
        <item>- Bugfixes</item>
        <item>- Bugfixes</item>
    </string-array>
</resources>
