<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCardView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"

        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="1dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/courseTextView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/default_class"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/periodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/default_period"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/teacherTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/periodTextView"
                android:layout_below="@+id/periodTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/default_teacher"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/subjectTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:gravity="end"
                android:minWidth="60dp"
                android:text="@string/default_subject"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/roomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/subjectTextView"
                android:layout_below="@+id/subjectTextView"
                android:gravity="end"
                android:minWidth="100dp"
                android:text="@string/default_room"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fitsSystemWindows="false" />

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/teacherTextView"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:text="@string/default_information"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>